--- a/HTML/css/productPage.css
+++ b/HTML/css/productPage.css
@@ -65,7 +65,7 @@
   vertical-align: middle;
 }
 
-#middle .priceProduce button::before,
+/* #middle .priceProduce button::before,
 button::after {
   -webkit-box-sizing: inherit;
   box-sizing: inherit;
@@ -73,7 +73,7 @@ button::after {
   position: absolute;
   width: 100%;
   height: 100%;
-}
+} */
 
 .draw {
   -webkit-transition: color 0.25s;
@@ -123,7 +123,11 @@ button::after {
   transition: border-color 0s ease-out 0.5s, width 0.25s ease-out 0.5s,
     height 0.25s ease-out 0.75s;
 }
-
+#middle .priceProduce button:hover {
+  -webkit-box-shadow: inset 0 0 0 4px #3a1199;
+  box-shadow: inset 0 0 0 4px #e2e609;
+  color: black;
+}
 .meet:hover {
   color: #fbca67;
 }
@@ -327,13 +331,32 @@ textarea:hover {
   display: grid;
   grid-template-columns: 1fr;
   column-gap: 30px;
-  row-gap: 30px;
+  row-gap: 10px;
+  align-self: center;
 }
 .contact__list button {
   background-color: #000;
   color: white;
   border-radius: 0;
   transition: 0.5s;
+}
+#input__weight {
+  width: 50px !important;
+}
+.parentIp__count {
+  text-align: center;
+}
+.parentIp__count p:first-child {
+  display: inline;
+  float: left;
+  margin-bottom: 0;
+}
+#ip__count {
+  display: inline;
+  margin-left: -65px;
+}
+.parentIp__weight p {
+  display: inline;
 }
 /* .contact__list textarea {
   grid-row: 1 / span 3;
@@ -342,6 +365,10 @@ textarea:hover {
 .contact__list button:hover {
   color: black;
   background-color: #03c9ca;
+}
+.contact__list .btnOfCount {
+  width: 50px;
+  margin: 0 auto;
 }
 
 .contact__info img {
